update social media links

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <p class="lead text-center">Hi there! I'm Samira, an incoming PhD student in the <a href="https://neuroscience.berkeley.edu/">Helen Wills Neuroscience Institute</a> at UC Berkeley  interested in cognition, aging, &amp; decision-making.</p>
                 <p class="lead text-center">Previously, I majored in <a href="https://cogsci.berkeley.edu/">Cognitive Science</a> and minored in Bioengineering at UC Berkeley.
                   I was a research associate in the <a href="http://neuroecon.berkeley.edu/">Neuroecon Lab</a>, where I worked on several projects focused on aging and decision-making; I completed an honors thesis in the lab in Spring 2020.
-                  I also was an <a href="http://www.columbia.edu/cu/biology/ug/amgen/">Amgen Scholar</a> at Columbia University, where I studied hippocampal circuits in a model of Alzheimer's disease.
+                  I also was an <a href="http://www.columbia.edu/cu/biology/ug/amgen/">Amgen Scholar</a> at Columbia University, where I studied hippocampal circuits in a rodent model of Alzheimer's disease.
                   Outside the lab, I was the President of the <a href="https://cssa.berkeley.edu/">Cognitive Science Student Association</a> as well as a participant and organizer of the <a href="https://cs-kickstart.berkeley.edu/">CS Kickstart</a> program and a <a href="https://eecs.berkeley.edu/cs-scholars">CS Scholar</a>.</p>
                 <p class="lead text-center">I enjoy spending my free time baking, painting, reading, and hiking.</p>
               </div>
@@ -130,7 +130,7 @@
     <br>B.A. Cognitive Science, Bioengineering Minor (May 2020)</p>
 
     <h3>awards &amp; honors</h3>
-    <p><b>Departmental Citation Award</b>, UC Berkeley Cognitive Science: represents the highest achievement by a graduating senior in the Cognitive Science Department (2020)</p>
+    <p><b>Departmental Citation Award</b>, UC Berkeley Cognitive Science: represents the highest achievement by a single graduating senior in the Cognitive Science Department (2020)</p>
     <p><b>Summer Undergraduate Research Fellowship (SURF)</b>, UC Berkeley L&S Sciences (2019)</p>
     <p><b>Diversity Research Award</b>, Scientific Research Network on Decision Neuroscience and Aging (2019)</p>
     <p><b>Amgen Scholars Fellowship</b>, Columbia University (2018)</p>
@@ -182,9 +182,9 @@
 
 						<p class="lead text-center" style="font-size:18px;color:#6772a3;"><span class="glyphicon glyphicon-envelope"></span> : smaboudian at berkeley dot edu
             <br class="lead text-center">
-            <a href="https://twitter.com/samiramabs" style="font-size:18px;"><img src="img/twittericon.png" alt="twitter: @samiramabs" style="width:30px;height:30px;"></a>
-              <a href="https://www.linkedin.com/in/samira-maboudian/" style="font-size:18px;"><img src="img/linkedin_icon.png" alt="linkedin: linkedin.com/in/samira-maboudian" style="width:30px;height:30px;"></a>
-
+            <a href="https://twitter.com/samiramabs" style="font-size:18px;"><img src="img/twitter.png" alt="twitter: @samiramabs" style="width:30px;height:30px;"></a>
+              <a href="https://www.linkedin.com/in/samira-maboudian/" style="font-size:18px;"><img src="img/linkedin.png" alt="linkedin: linkedin.com/in/samira-maboudian" style="width:30px;height:30px;"></a>
+              <a href="http://goodreads.com/samiram" style="font-size:18px;"><img src="img/goodreads.png" alt="goodreads: goodreads.com/samiram" style="width:30px;height:30px;"></a>
             </p>
 
       </div>
