remove photos & fix contact subpage

--- a/index.html
+++ b/index.html
@@ -81,16 +81,20 @@
         </div><!-- /.container -->
     </nav>
 
+    <!-- Photo -->
+    <h1 class="text-center">hi, I'm Samira</h1>
+      <div class="text-center">
+        <img  class="mx-auto d-block" src="img/IMG-2118.JPG" alt="me, holding a brain" style="width:230px;height:273px;max-width:100%;height:auto;" >
+      </div>
 
-    <!-- Heading -->
+    <!-- About -->
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
                 <h1 id="about" class="text-center" style="color:#fff;">. . .</h1>
-                <img src="img/IMG-2118.JPG" ALIGN="left" class="img-circle" class="mx-auto d-block" alt="me, holding a brain" style="width:253px;height:300px;max-width:100%;height:auto;">
                 <h1 class="text-center">about me</h1>
                 <div style="text-align: center;">
-                <p class="lead text-center">Hi there! I'm Samira, an incoming PhD student in the <a href="https://neuroscience.berkeley.edu/">Helen Wills Neuroscience Institute</a> at UC Berkeley  interested in cognition, aging, &amp; decision-making.</p>
+                <p class="lead text-center">I'm an incoming PhD student in the <a href="https://neuroscience.berkeley.edu/">Helen Wills Neuroscience Institute</a> at UC Berkeley  interested in human neuroscience, aging, &amp; decision-making.</p>
                 <p class="lead text-center">Previously, I majored in <a href="https://cogsci.berkeley.edu/">Cognitive Science</a> and minored in Bioengineering at UC Berkeley.
                   I was a research associate in the <a href="http://neuroecon.berkeley.edu/">Neuroecon Lab</a>, where I worked on several projects focused on aging and decision-making; I completed an honors thesis in the lab in Spring 2020.
                   I also was an <a href="http://www.columbia.edu/cu/biology/ug/amgen/">Amgen Scholar</a> at Columbia University, where I studied hippocampal circuits in a rodent model of Alzheimer's disease.
@@ -102,7 +106,9 @@
         </div>
     </div>
 
+
     <!-- Photos -->
+    <!--
   <div class="row">
     <p></p>
     <div class="col-sm-2"><p class="lead text-center"> <img src="img/hike.JPG" alt="me hiking" style="width:200px;height:150px;"> </div>
@@ -111,8 +117,7 @@
     <div class="col-sm-2"><p class="lead text-center"> <img src="img/poster_blurred_crop.jpg" alt="me presenting a poster" style="width:200px;height:150px;"> </div>
     <div class="col-sm-2"><p class="lead text-center"> <img src="img/SURF_talk.JPEG" alt="me giving a talk at the Berkeley SURF conference" style="width:200px;height:150px;"> </div>
     <div class="col-sm-2"><p class="lead text-center"> <img src="img/brain_atlas.JPEG" alt="a brain atlas" style="width:200px;height:150px;"> </div>
-  </div>
-
+  </div> -->
 
 
   <!-- CV section -->
@@ -144,7 +149,7 @@
         <li>Analyzing effects of aging and dementia on memory-based decision making (Mentor: Dr. Zhihao Zhang; collaboration with Prof. Winston Chiong, UCSF Memory &amp; Aging Center)</li>
         <li>Designing and implementing a paradigm to analyze prosocial behavior and decision making in rodent models (in collaboration with Prof. Daniela Kaufer, UC Berkeley Integrative Biology)</li>
       </ul></p>
-    <p><b>Dranovsky Lab</b>, Columbia University (2018-2020)
+    <p><b>Dranovsky Lab</b>, Columbia University (2018)
     <br>Amgen Scholars Fellowship.
     <br>Effects of Alzheimer’s Disease and early life stress on hippocampal circuitry in mice</p>
     <p><b>Adesnik Lab</b>, UC Berkeley (2017-2018)</p>
@@ -175,16 +180,15 @@
 	<!-- Footer: Contact -->
 	<footer>
     <h1 id="contact" class="text-center" style="color:#dfe1eb;">. . .</h1>
-		<h1 class="text-center">contact</h1>
-		<!-- Map -->
-
+		<h1 class="text-center">contact me</h1>
 			<div class="container">
-
+            <br>
 						<p class="lead text-center" style="font-size:18px;color:#6772a3;"><span class="glyphicon glyphicon-envelope"></span> : smaboudian at berkeley dot edu
+            <br>
             <br class="lead text-center">
-            <a href="https://twitter.com/samiramabs" style="font-size:18px;"><img src="img/twitter.png" alt="twitter: @samiramabs" style="width:30px;height:30px;"></a>
-              <a href="https://www.linkedin.com/in/samira-maboudian/" style="font-size:18px;"><img src="img/linkedin.png" alt="linkedin: linkedin.com/in/samira-maboudian" style="width:30px;height:30px;"></a>
-              <a href="http://goodreads.com/samiram" style="font-size:18px;"><img src="img/goodreads.png" alt="goodreads: goodreads.com/samiram" style="width:30px;height:30px;"></a>
+            <a href="https://twitter.com/samiramabs" style="font-size:18px;"><img src="img/twitter.png" alt="twitter: @samiramabs" style="width:40px;height:40px;"></a>
+              <a href="https://www.linkedin.com/in/samira-maboudian/" style="font-size:18px;"><img src="img/linkedin.png" alt="linkedin: linkedin.com/in/samira-maboudian" style="width:40px;height:40px;"></a>
+              <a href="http://goodreads.com/samiram" style="font-size:18px;"><img src="img/goodreads.png" alt="goodreads: goodreads.com/samiram" style="width:40px;height:40px;"></a>
             </p>
 
       </div>
